--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <a href="portfolio.html">Portfolio</a>
     <h1>Kevin's Home Page</h1>	
 <h2> <font size="50"> <ins> "Baseball" <ins> </font> </h2>
-    <img src="images/bball.jpg" height="300">
-	<img src="images/NY.jpg" height="300"> 	 
+    <img src="Images/bball.jpg" height="300">
+	<img src="Images/NY.jpg" height="250"> 	 
 		 </a>
 	<style>
   </body
 </html> 
+
+
