--- a/portfolio.html
+++ b/portfolio.html
@@ -9,9 +9,8 @@
     <a href="portfolio.html">Portfolio</a>
     <h1 style="color:black;"> Greatest Page Ever!</h1>
     <img src="images/LordG.jpg" height="300">
-	<h2>RAZOR</h2>
-	<img src="images/razor.jpg" height="250"> 
-	<img src="images/Land.jpg" height="500">
+	<h2>Projects</h2>
+	<img src="Images/Land.jpg" height="500">
 	<br>
     </a>
 	<style>
