--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	<img src="Images/NY.jpg" height="250"> 	 
 		 </a>
 	<style>
-  </body
-</html> 
+body {background-color: skyblue;}
+    </body
+  </html> 
 
 
