--- a/portfolio.html
+++ b/portfolio.html
@@ -7,14 +7,16 @@
 	  <body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
-    <h1 style="color:black;"> Greatest Page Ever!</h1>
-    <img src="images/LordG.jpg" height="300">
+    <h1 style="color:black;">Portfolio</h1>
+    <img src="Images/Games.jpg" height="150">
+	<img src="Images/Land.jpg" height="200">
 	<h2>Projects</h2>
-	<img src="Images/Land.jpg" height="500">
-	<br>
-    </a>
-	<style>
-body {background-color: skyblue;}
-	  </body>
-	</html>
-	</html>
+	</a>
+<h1><a href= "https://scratch.mit.edu/projects/118072472/">Scratch Projects1 </a></h1>
+<h1><a href= "https://scratch.mit.edu/projects/119427710/">Scratch Project2 </a></h1>
+<h1><a href= "https://repl.it/EPAP/16">Tic-Tac-Toe </a></h1>
+<h1><a href= "https://repl.it/DtZP/41">Computer-Science-Adventure </a></h1>
+	</body>
+<html>
+
+
